objects/vlocity_cmt__PartyRelationshipType__c.object
<CustomObject>
    <description>Party Relationship Types store the relationship types for contacts, accounts or households. For example, this might be Head of Household, CEO, or Board Member. This object defines the type of relationship between two parties: a source and target. For example, &quot;{SOURCE} is a manager for {TARGET}.&quot;</description>
    <fields>
        <fullName>vlocity_cmt__Color__c</fullName>
        <inlineHelpText>Color Value in Hexadecimal Format (e.g. #FFFFFF)</inlineHelpText>
        <label>Color</label>
        <length>7</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__RelationshipCategory__c</fullName>
        <label>Relationship Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Family</fullName>
                </value>
                <value>
                    <fullName>Natural Supports</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourcePartyType__c</fullName>
        <label>Source Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Premises</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SourceString__c</fullName>
        <inlineHelpText>Description of the relationship from Source. (eg, &quot;is the CEO of&quot;)</inlineHelpText>
        <label>Label String</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetPartyType__c</fullName>
        <label>Target Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Household</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Premises</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_cmt__TargetRole__c</fullName>
        <inlineHelpText>Role of the Target party. (eg, &quot;Company&quot;)</inlineHelpText>
        <label>Target Role</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Vlocity Party Relationship Type</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_cmt__SourceString__c</columns>
        <columns>vlocity_cmt__TargetRole__c</columns>
        <columns>vlocity_cmt__Color__c</columns>
        <columns>vlocity_cmt__SourcePartyType__c</columns>
        <columns>vlocity_cmt__TargetPartyType__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Source Role</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Party Relationship Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>